# pixel-perfect-forms

./: .gitignore  .lighthouserc.json  .vercelignore  Cargo.toml  PHASE_D_COMPLETE.md  PLAN.md  README.md  app-3b37917367f83beb.js  app-3b37917367f83beb_bg.wasm  app.d.ts  app.js  app_bg.wasm  app_bg.wasm.d.ts  index.html  netlify.toml  package.json  playwright.config.js  rustfmt.toml  simple-build.sh  status.html  validate_deployment.sh  vercel.json  windsurf_deployment.yaml
.github/workflows/: ci.yml  deploy.yml
app/: Cargo.toml  Trunk.toml  index.html
app/src/: calibration.rs  calibration_wizard.rs  checkbox.rs  coordinates.rs  cv_alignment.rs  document_manager.rs  font_metrics.rs  lib.rs  main.rs  main_app.rs  overlay_manager.rs  proofing_ui.rs  rendering_engine.rs  signature.rs  text_input.rs
app/static/: bootstrap.js  export-system.js  paper-validation.js  styles.css
docs/context-engineering/: README.md  technology-assessment-2025.md
docs/context-engineering/architectural-specifications/: 01-foundation-layer.md  02-rendering-layer.md  03-interaction-layer.md
docs/context-engineering/research-findings/: RESEARCH.md  pixel-perfect-requirements.md  technology-validation-2025.md
docs/context-engineering/technical-specifications/: project-structure.md
public/: index.html
scripts/: analyze-performance.js
tests/: accuracy.spec.js
