# 
# ██████╗  █████╗ ██████╗  ██████╗  ██████╗      ████████╗ ██████╗ ███╗   ███╗██╗     
# ██╔══██╗██╔══██╗██╔══██╗ ██╔══██╗██╔════╝      ╚══██╔══╝██╔═══██╗████╗ ████║██║     
# ██████╔╝███████║██████╔╝ ██████╔╝██║  ███╗        ██║   ██║   ██║██╔████╔██║██║     
# ██╔══██╗██╔══██║██╔══██╗ ██╔══██╗██║   ██║        ██║   ██║   ██║██║╚██╔╝██║██║     
# ██║  ██║██║  ██║██║  ██║ ██║  ██║╚██████╔╝        ██║   ╚██████╔╝██║ ╚═╝ ██║███████╗
# ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝ ╚═╝  ╚═╝ ╚═════╝         ╚═╝    ╚═════╝ ╚═╝     ╚═╝╚══════╝
#                                         CARGO.TOML (workspace)

[workspace]
members = ["app"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
# Smaller wasm
opt-level = "s"
codegen-units = 1
lto = true

