# 
# █████╗ ██████╗ ██████╗      ██████╗ ██████╗  ██████╗  ██████╗     ████████╗ ██████╗ ███╗   ███╗██╗     
# ██╔══██╗██╔══██╗██╔══██╗    ██╔════╝ ██╔══██╗██╔═══██╗██╔══██╗    ╚══██╔══╝██╔═══██╗████╗ ████║██║     
# ███████║██████╔╝██████╔╝    ██║  ███╗██████╔╝██║   ██║██████╔╝       ██║   ██║   ██║██╔████╔██║██║     
# ██╔══██║██╔═══╝ ██╔══██╗    ██║   ██║██╔══██╗██║   ██║██╔══██╗       ██║   ██║   ██║██║╚██╔╝██║██║     
# ██║  ██║██║     ██║  ██║    ╚██████╔╝██║  ██║╚██████╔╝██║  ██║       ██║   ╚██████╔╝██║ ╚═╝ ██║███████╗
# ╚═╝  ╚═╝╚═╝     ╚═╝  ╚═╝     ╚═════╝ ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝       ╚═╝    ╚═════╝ ╚═╝     ╚═╝╚══════╝
#                                                app/Cargo.toml

[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-utils = "0.2"

