# 
# █████╗ ██████╗ ██████╗      ██████╗ ██████╗  ██████╗  ██████╗     ████████╗ ██████╗ ███╗   ███╗██╗     
# ██╔══██╗██╔══██╗██╔══██╗    ██╔════╝ ██╔══██╗██╔═══██╗██╔══██╗    ╚══██╔══╝██╔═══██╗████╗ ████║██║     
# ███████║██████╔╝██████╔╝    ██║  ███╗██████╔╝██║   ██║██████╔╝       ██║   ██║   ██║██╔████╔██║██║     
# ██╔══██║██╔═══╝ ██╔══██╗    ██║   ██║██╔══██╗██║   ██║██╔══██╗       ██║   ██║   ██║██║╚██╔╝██║██║     
# ██║  ██║██║     ██║  ██║    ╚██████╔╝██║  ██║╚██████╔╝██║  ██║       ██║   ╚██████╔╝██║ ╚═╝ ██║███████╗
# ╚═╝  ╚═╝╚═╝     ╚═╝  ╚═╝     ╚═════╝ ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝       ╚═╝    ╚═════╝ ╚═╝     ╚═╝╚══════╝
#                                                app/Cargo.toml

[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Window",
  "CssStyleDeclaration",
  "Worker",
  "MessageEvent",
  "ImageData",
  "console",
  "OffscreenCanvas"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-utils = "0.2"
wee_alloc = "0.4.5"  # Smaller allocator for WASM
console_error_panic_hook = "0.1.6"  # Better error reporting

